objects/EUR_CRM_Competitor_Contract_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Competitor Contracts Tracking (EU)</relationshipLabel>
        <relationshipName>Competitor_Contracts_Tracking_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>EUR_CRM_Category__c</referenceTo>
        <relationshipLabel>Competitor Contracts Tracking (EU)</relationshipLabel>
        <relationshipName>Competitor_Contracts_Tracking_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diageo</fullName>
                </value>
                <value>
                    <fullName>Moët Hennessy</fullName>
                </value>
                <value>
                    <fullName>Bacardi</fullName>
                </value>
                <value>
                    <fullName>Bourchanin</fullName>
                </value>
                <value>
                    <fullName>Ebertec</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Goods</fullName>
                </value>
                <value>
                    <fullName>Grand Sud Import</fullName>
                </value>
                <value>
                    <fullName>Drinks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Description__c</fullName>
        <label>Contract Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <label>Competitor Contract Tracking (EU)</label>
    <listViews>
        <fullName>EUR_MA_Competitor_Contract_Tracking</fullName>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Competitor__c</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Contract_Description__c</columns>
        <columns>EUR_CRM_Contract_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Competitor_Contract_Tracking__c.EUR_MA_Competitor_Contract_Tracking</value>
        </filters>
        <label>EUR MA Competitor Contract Tracking</label>
        <language>en_US</language>
        <sharedTo>
            <role>EUR_MA_OLD</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CCT-{0000000000}</displayFormat>
        <label>Competitor Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Contracts Tracking (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_MA_Competitor_Contract_Tracking</fullName>
        <active>true</active>
        <label>EUR MA Competitor Contract Tracking</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>